# skillet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATIONS.md  README.md  RELEASING.md  ROADMAP.md  agents.md  cachetta-usage-handoff.md  justfile  netlify.toml  pyproject.toml
research/skill-collection/: .env.example  .gitignore  CLAUDE.md  README.md  analyze_anatomy.py  check_db.py  data  inspect_raw.py  pyproject.toml
research/skill-collection/.claude/skills/marimo-screenshot/: SKILL.md
research/skill-collection/analyze_skills/: __init__.py  cli.py  detect_language.py  extract_features.py  ingest_content.py  models.py  score_anatomy.py  utils.py  utils_test.py
research/skill-collection/docs/: DATA_PIPELINE.md  PIPELINE_REVIEW.md
research/skill-collection/labeler/: CLAUDE.md  index.html  llm.js  package.json  pnpm-lock.yaml  server.js  vite.config.js
research/skill-collection/labeler/src/: main.ts  style.css
research/skill-collection/notebooks/: 01_quantitative.py  02_llm_analysis.py  02_qualitative.py  03_evaluation.py  03_synthesis.py  README.md
research/skill-collection/results/: classified_skills.md  progress.md  skill_urls.txt  summary.json
research/skill-collection/results/.classify_cache/: 0022e6713a0e49e0.json  003cfa9cbf673e30.json  0050995f18550fc4.json  0067fee5373a91b4.json  00690c4a71c9ef5d.json  0099415816881c0e.json  009a79cc72b1e535.json  00d64cb5b074fb14.json  00f67164e1f41d41.json  00fb7e04fcbd4b4b.json  01073a5d9b253596.json  010914cf2dfea442.json  014db9a3c8230cca.json  01564b9a0ebfb5da.json  016e557649916fed.json  017b47e308fa1688.json  01863e133eedb462.json  01d005a4560ea5b4.json  01e4c922d361f6cb.json  01eb26f0fb716f08.json  01f0a1d513dde965.json  021272b96f959fa5.json  024f96afefdd067e.json  02ab40e0b8ee8af0.json  02f9d392a6598a78.json  033ee34bd0a841a5.json  037fb84699c86e79.json  0407a19d40e62e2f.json  0439d2e454609cb7.json  043a713c7ae81fad.json  046650dbfde21a5c.json  049d9575b00ea464.json  04b6228a63ed84c2.json  04df5674245d72d2.json  04f23941aeaab90f.json  050ff9f95e12a419.json  053a981030b0c2f1.json  0586f4e627b3c376.json  058beb49f37ec693.json  05948f332a68eec5.json  (+1523 more)
research/skill-collection/results/content/0utKast/antigravity_skills/blob/1166e58d2840757427250b852844901a55757917/: test_skill.md
research/skill-collection/results/content/0x05010705/hxi-gm-docs/blob/a7cc627fa835927bfae5a883f058501dd51c75d5/commands/: capskill.md  getskill.md  setskill.md
research/skill-collection/results/content/121Development/personal-website/blob/815ec7129556e371ea9d9b5d237cf27d45d714bd/: SKILL.md
research/skill-collection/results/content/Accents-Asia/accents-asia.github.io/blob/867e4bfe84b07f4ed9a3caebb707c5c10bb12f99/_posts_tags/: revision_skill.md
research/skill-collection/results/content/AceTheDactyl/Perplexity-Saves/blob/d4de9e77e512e90c584a47d2b09f1fe5e40515ef/config/: SKILL.md
research/skill-collection/results/content/AlexDyatchenko/QAknowledge/blob/191bb50374c95b318ab405c0878a00693825d2d7/16%20TypeScript/: skill.md
research/skill-collection/results/content/AlexeyNilov/dnd_engine/blob/174464efeb5f7d552d144356c2c2118bbc118489/doc/: skill.md
research/skill-collection/results/content/Asma-Farheen/Mark.down/blob/950a8b8f8d9180bacf32e7e754ff58adf6fc5bd0/: Skill.md
research/skill-collection/results/content/BeautyyuYanli/Weather-Skill/blob/138a35cbb4fd1d036f4ad0101ccb2079a34eb674/: SKILL.md
research/skill-collection/results/content/DYAI2025/Custom_GPT_canva-assist/blob/65263a065a1123b2edf3f2dd0b106f6322ac7132/: SKILL.md
research/skill-collection/results/content/Factory-AI/skills/blob/21a74dec467a1424e3e067712d004cd987d6a0ce/template/: SKILL.md
research/skill-collection/results/content/GlacierEQ/mastermind/blob/f7eee0192013d7ce649612ac1c263f874b679b0e/connectivity-hub/: SKILL.md
research/skill-collection/results/content/GlacierEQ/mastermind/blob/f7eee0192013d7ce649612ac1c263f874b679b0e/testskill/: SKILL.md
research/skill-collection/results/content/HosungYou/ScholaRAG-helper/blob/85d9d1629bcf287ac14834029bea9b0e26f7f80d/: SKILL.md
research/skill-collection/results/content/Kashif-alt9/alt-123k/blob/5e08982ffbb87d56852d10b935fe4a787bdceea2/: skill.md
research/skill-collection/results/content/MasujimaRyohei/Career/blob/e60bace36abd7e699e48bd89a45d3c6828517ffc/: Skill.md
research/skill-collection/results/content/Shay350/tutoring-ops/blob/3348e89e759899331c061518c0f8264a432183b3/: SKILL.md
research/skill-collection/results/content/amterp/council/blob/8d90a0d37b9e2a005d6d52e0981400900920d106/: SKILL.md
research/skill-collection/results/content/derekphilipau/museum-semantic-search/blob/6fea8667800e07a2848bfde82abe21997ddf2c85/: SKILL.md
research/skill-collection/results/content/faithman/faithman.github.io/blob/768d918f4d1046d5f22dda986a3db7db3ee5d46e/: skill.md
research/skill-collection/results/content/hot-dao/kit/blob/a09e565cb2a877569cd18333f2bc3b67bc31144e/: skill.md
research/skill-collection/results/content/polyglot-k/polyglot-k/blob/76c26107604ee501c7d8b0b0ba033219f228787c/: my-skill.md
research/skill-collection/results/content/pxheim/zettelkasten/blob/ff198410b99f740e3e8b1c6be9ce8a6cba25214e/: familiarity-is-not-the-same-as-skill.md
research/skill-collection/results/content/samoyedsun/samoyedsun.github.io/blob/f7b2d80ba04bd1caac5c5c34e0af2f22a6e6be2b/: skill.md
research/skill-collection/skill_collection/: __init__.py  agent.py  agent_test.py  analyze.py  cache.py  cache_test.py  classify.py  cli.py  collect.py  collect_test.py  collect_v2.py  collect_v2_test.py  db.py  db_test.py  fetch_v2.py  fetch_v2_test.py  filter.py  filter_test.py  github.py  github_test.py  models.py  repo_info.py  report.py  utils.py  validate_v2.py  validate_v2_test.py
research/skill-collection/skill_collection/results/: progress.md
research/skill-collection/tests/integration/: conftest.py  test_collect.py
research/skill-collection/tools/: eval_batch.py  eval_skill.py  export_labels.py  optimize_prompt.py
(+2380 files in other folders)
