[project]
name = "skill-collection"
version = "0.1.0"
description = "Collect SKILL.md files from GitHub"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-frontmatter>=1.1.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-describe>=2.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]
notebooks = [
    "marimo>=0.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "altair>=5.0.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
collect-skills = "skill_collection:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["skill_collection", "tests"]
python_files = ["*_test.py", "test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B023",   # closure captures loop variable (intentional in our callback pattern)
    "SIM108", # prefer if-else for readability over ternary in some cases
]

[tool.ruff.lint.isort]
known-first-party = ["skill_collection"]
