[project]
name = "analyze-skills"
version = "0.1.0"
description = "Analysis notebooks for skill data"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
]

[project.optional-dependencies]
notebooks = [
    "marimo>=0.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "altair>=5.0.0",
    "pyarrow>=15.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["analyze_skills"]
